# EviSI-Eval

./: .gitignore  AGENT_RUNBOOK.md  AGENT_RUNBOOK_EN.md  AGENT_RUNBOOK_ZH.md  CHANGELOG.md  CLAUDE.md  EVALUATION_PROTOCOL_ZH.md  LICENSE  README.md  SCORING_SPEC_V1_ZH.md  SKILL.md  annotation_guideline_v1.md  environment.yml  local_secrets.py.example  pyproject.toml  requirements.txt  run_agent.py  run_eval.py  run_evaluation.py
data/: example_outputs.jsonl  example_samples.jsonl  labeled_raw_samples.jsonl  labeled_system_outputs.jsonl  mode_demo_raw_samples.jsonl  mode_demo_system_outputs.jsonl  raw_data.jsonl  raw_samples.jsonl  system_outputs.jsonl
docs/: agent_architecture_review.md  architecture.md  code_review_v05.md  data_contract.md  operation_guide.md  prompt-set-v0.3.md  requirements-v0.1.md  requirements-v0.3.md  scoring_protocol.md  semantic_extraction_guide.md  translation_evaluation_survey.md  v0.6_p0_p1_implementation_plan.md  v0.6_technical_design.md  v0.7_protocol_design.md
evisi_eval/: __init__.py  agent.py  agent_aggregator.py  agent_card_builder.py  agent_evaluator.py  agent_pipeline.py  agent_report.py  agents.py  aggregator.py  api_check.py  card_builder.py  cli.py  config.py  dataset.py  evaluator.py  extraction_pipeline.py  importers.py  io_utils.py  llm_provider.py  models.py  normalization.py  pipeline.py  prompt_loader.py  proposition_verifier.py  report.py  scoring.py  v06_agents.py  v06_pipeline.py  v06_validation.py  v07_agents.py  v07_pipeline.py  v07_validation.py  validation.py  verifier.py
prompts/: adjudicator_agent.md  reviewer.md  (+53 more)
(+93 files in other folders)
