[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evisi-eval-agent"
version = "0.1.0"
description = "Evidence-driven final SI transcript quality evaluator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
evisi-eval = "evisi_eval.cli:main"

