[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evisi-eval-agent"
version = "0.4.1"
description = "Evidence-driven agent for final simultaneous-interpretation quality evaluation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
evisi-eval = "evisi_eval.cli:main"
